language/move-lang/tests/move_check/expansion/standalone_mname_with_type_args.move
module M {
    foo() {
        let _ = 0 + M<u64>;
    }
}
